...

  return (
    <View
      style={styles.container}
      accessibilityLabel={containerAccessibilityLabel}
      accessibilityRole="none"
      testID="game-hud"
    >
      {/* Compteur sauts */}
      <View style={styles.block} accessible={false}>
        <Text style={styles.icon} accessible={false}>
          {'↗'}
        </Text>
...
